apps/core/argocd/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`argocd.spiderman.lan`)
    services:
    - name: argocd-server
      port: 80
  - kind: Rule
    match: Host(`argocd.spiderman.lan`) && Header(`Content-Type`, `application/grpc`)
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
